Tests/CompilerTests/negative/generic-requirement.diagnostics.expected
negative/generic-requirement.hylo:13.1-6: error: no implementation of 'f(x:)'
given<T> S<T> is P {
~~~~~
